# Hi-Paris-AI-Sustainability-Hackathon-2024

./: .gitignore  README.md
docs/: Course1_FeatureEngineering_Hi5.ipynb
src/: README.md  pyproject.toml
src/exploration/: check_data.py  check_unique_num_in_col.py
src/scripts/: save_one_hot_encoding.py
src/water_shortage/: DNN.py  Data_processing.py  Dimensionality_reduction.py  Encoders.py  LSTM.py  convert_dtypes.py  embedding.py  fill_nan.py  model.py  preprocess.py
