[tool.poetry]
name = "hickathon"
version = "0.0.1"
description = ""
authors = ["Kazeto Fukasawa"]

readme = 'README.md'  # Markdown files are supported

keywords = ['hickathon']

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "1.24.2"
scipy = "1.10.1"
matplotlib = "3.7.1"
pandas = "1.5.3"
notebook = "6.5.4"


[tool.poetry.dev-dependencies]
pytest = "*"
ipython = "*"
Sphinx = "7.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"